# aevum

./: Aevum.desktop  CHANGELOG.md  Cargo.toml  README.md
aevum/: Cargo.toml  README.md
aevum/src/: main.rs
aevum/src/ui/: create_alarm.rs  list_alarms.rs  ring_alarm.rs  window.rs
aevum/src/wayland/: mod.rs
alarm/: Cargo.toml
alarm/src/: audio.rs  error.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: config.md
gtk/src/: main.rs
rezz/: Cargo.toml
src/: config.rs  lib.rs
src/ui/: create_alarm.rs  mod.rs  window.rs
