[package]
name = "aevum"
version = "1.1.1"
description = "Alarm clock"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/alarm"
license = "GPL-3.0"
rust-version.workspace = true
edition.workspace = true

[workspace]
members = ["rezz", "cli", "alarm"]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
alarm = { version = "1.1.0", path = "./alarm" }
clap = "4.4.4"
futures-util = "0.3.31"
libc = "0.2.148"
nix = "0.30.1"
rezz = { version = "1.1.0", path = "./rezz" }
rodio = { version = "0.21.1", default-features = false, features = ["playback", "flac"] }
serde = "1.0.188"
serde_json = "1.0.107"
thiserror = "2.0.11"
time = "0.3.29"
tokio = "1.32.0"
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = "1.4.1"
zbus = { version = "5.5.0", default-features = false }

[dependencies]
alarm.workspace = true
calloop = { version = "0.14.2", features = ["executor"] }
calloop-wayland-source = "0.4.0"
configory = { version = "0.5.2", features = ["docgen", "log"] }
glutin = { version = "0.32.3", default-features = false, features = ["egl", "wayland"] }
raw-window-handle = "0.6.2"
rezz.workspace = true
serde.workspace = true
skia-safe = { version = "0.87.0", features = ["all-linux", "textlayout"] }
smithay-client-toolkit = { version = "0.19.2", default-features = false, features = ["xkbcommon"] }
thiserror.workspace = true
time = { workspace = true, features = ["macros", "formatting", "local-offset"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
wayland-backend = { version = "0.3.10", features = ["client_system"] }

[build-dependencies]
gl_generator = "0.14.0"
