[package]
name = "aevum"
version = "1.1.1"
description = "Alarm clock"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/alarm"
license = "GPL-3.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
alarm.workspace = true
calloop = { version = "0.14.2", features = ["executor"] }
calloop-wayland-source = "0.4.0"
configory = { version = "0.5.2", features = ["docgen", "log"] }
glutin = { version = "0.32.3", default-features = false, features = ["egl", "wayland"] }
raw-window-handle = "0.6.2"
rezz.workspace = true
serde.workspace = true
skia-safe = { version = "0.87.0", features = ["all-linux", "textlayout"] }
smithay-client-toolkit = { version = "0.19.2", default-features = false, features = ["xkbcommon"] }
thiserror.workspace = true
time = { workspace = true, features = ["macros", "formatting", "local-offset"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
wayland-backend = { version = "0.3.10", features = ["client_system"] }

[build-dependencies]
gl_generator = "0.14.0"
