[package]
name = "alarm"
version = "2.1.0"
description = "Rezz alarm clock client interface"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/alarm"
license = "GPL-3.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
libc.workspace = true
libpulse-binding.workspace = true
rezz.workspace = true
rodio.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["macros", "formatting", "local-offset"] }
tokio-stream.workspace = true
tokio = { workspace = true, features = ["macros", "signal"] }
tracing.workspace = true
zbus = { workspace = true, features = ["tokio"] }
